# MLP-letter-recognition-

./: .gitignore  README.md  README_RUS.md
materials/: perceptron.md  perceptron_rus.md
src/MLP_s21/: CMakeLists.txt  CMakeLists.txt.user.932af64  CMakeLists.txt.user.fbf791e  Makefile  research.md  test  weights_3.txt  weights_4.txt
src/MLP_s21/controller/: controller.cpp  controller.hpp
src/MLP_s21/forms/: learningmainwindow.ui  learningstartwindow.ui  mainwindow.ui  secondwindow.ui  settingswindow.ui
src/MLP_s21/graphics/: learningmainwindow.cpp  learningstartwindow.cpp  main.cpp  mainwindow.cpp  paintscene.cpp  secondwindow.cpp  settingswindow.cpp
src/MLP_s21/graphics/headers/: learningmainwindow.hpp  learningstartwindow.hpp  mainwindow.h  paintscene.hpp  secondwindow.hpp  settingswindow.h
src/MLP_s21/logic/: Emnist_sample.cpp  GraphNet.cpp  LaunchMode.cpp  Matrix.cpp  MatrixNet.cpp  Net.cpp
src/MLP_s21/logic/headers/: Emnist_sample.hpp  GraphNet.hpp  Matrix.hpp  MatrixNet.hpp  Net.hpp
src/MLP_s21/logic/tests/: letterA.txt  test.cpp
src/MLP_s21/qrc/: sources.qrc
src/MLP_s21/weights/: weights_2.txt  weights_3.txt  weights_4.txt  weights_5.txt
src/build-graphics-Qt_6_4_2_for_macOS-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
src/build-graphics-Qt_6_4_2_for_macOS-Debug/.cmake/api/v1/reply/: cmakeFiles-v1-4c21badba09011d01858.json  codemodel-v2-ac552c5bd71d112d44a8.json  index-2023-03-06T11-29-01-0482.json  (+3 more)
src/build-graphics-Qt_6_4_2_for_macOS-Debug/.cmake/api/v1/reply.prev/: cache-v2-07a0aa98e7cee9334efc.json  codemodel-v2-f0961aae7ce490e36c98.json  index-2023-03-06T11-26-48-0639.json  target-MLP_Design-Debug-fdf466a91dbdbf338ff1.json
src/build-graphics-Qt_6_4_2_for_macOS-Debug/.qt/: QtDeploySupport.cmake
src/build-graphics-Qt_6_4_2_for_macOS-Debug/.qtc_clangd/: compile_commands.json
src/build-graphics-Qt_6_4_2_for_macOS-Debug/MLP_Design_autogen/: deps  mocs_compilation.cpp
src/build-graphics-Qt_6_4_2_for_macOS-Debug/MLP_Design_autogen/EWIEGA46WW/: moc_learningmainwindow.cpp  moc_learningstartwindow.cpp  moc_mainwindow.cpp  moc_secondwindow.cpp
src/build-graphics-Qt_6_4_2_for_macOS-Debug/MLP_Design_autogen/include/: ui_learningmainwindow.h  ui_learningstartwindow.h  ui_mainwindow.h  ui_secondwindow.h
src/graphics/: CMakeLists.txt  drawingwindow.cpp  drawingwindow.h  drawingwindow.ui  learningmainwindow.cpp  learningmainwindow.hpp  learningmainwindow.ui  learningstartwindow.cpp  learningstartwindow.hpp  learningstartwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  paintscene.hpp  paintwidgets.cpp  paintwidgets.h  secondwindow.cpp  secondwindow.hpp  secondwindow.ui  test_en_US.ts
src/logic/: CMakeLists.txt  Dataset.cpp  main.cpp
src/logic/MLP_Design/: CMakeLists.txt  learningstartwindow.cpp  learningstartwindow.hpp  mainwindow.ui  paintscene.cpp  secondwindow.cpp  secondwindow.hpp
src/logic/includes/: Dataset.h  Dataset.hpp  Emnist_sample.hpp  GraphNet.hpp  Matrix.hpp  MatrixNet.hpp  Net.hpp  NeuralNetwork.hpp  Weights.hpp  main.hpp
src/logic/sources/: Dataset.cpp  Emnist_sample.cpp  GraphNet.cpp  LaunchMode.cpp  Matrix.cpp  MatrixNet.cpp  Net.cpp  NeuralNetwork.cpp  Weights.cpp  main.cpp
(+566 files in other folders)
